# ofi_PDF_Parser

./: .gitignore  README.md  batch_runner.py  debug_regex.py  debug_text.txt  debug_zapa.py  implementation_plan.md  investigate_failures.py  investigation_report.txt  main.py  pyproject.toml  refactoring_roadmap.md  reproduce_issue.py  requirements.txt  run_gui.py
ParsingTool/: audit_results.py  main.py
ParsingTool/common/: system.py
ParsingTool/core/: controller.py
ParsingTool/interfaces/gui/: theme.py
ParsingTool/parsing/: __init__.py  cli.py  gui.py  merge_with_overrides.py  parser.py  pdf_parser.py  qc.py
ParsingTool/parsing/domestic_zapi/: pipeline.py
ParsingTool/parsing/export_orders/: pipeline.py
ParsingTool/parsing/packing_list/: pipeline.py
ParsingTool/parsing/shared/: export_patterns.py  pdf_utils.py  schemas.py
dev_workbench/: verify_ocr_effectiveness.py
tests/: test_cli_parity.py  test_domestic_pipeline.py  test_export_pipeline.py  test_export_pipeline_rewrite.py  test_imports.py  test_refactor.py
